# FluxV3

./: .gdextension  .gitignore  Makefile  README.md  SConstruct  build.zig  build.zig.zon  default_bus_layout.tres  export_presets.cfg  log.txt  project.godot
assets/images/: flux.png.import
godot/: .gdextension  export_presets.cfg  flux.gdextension  project.godot
godot/prefabs/: health.tscn  lefthud.tscn  map_button.tscn  righthud.tscn
godot/scenes/: game.tscn  loading.tscn  menu.tscn
prefabs/: health.tscn  lefthud.tscn  map_button.tscn  righthud.tscn
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: flux.rs  lib.rs  startup.rs
rust/src/content/: maploader.rs  mod.rs
rust/src/content/maps/: beatmap.rs  beatmapset.rs  mapset.rs  mod.rs  sspm.rs
rust/src/game/: cursor.rs  debug.rs  mod.rs  note.rs  score.rs
rust/src/game/hud/: health.rs  left.rs  mod.rs  right.rs
rust/src/game/managers/: hud_manager.rs  mod.rs  note_manager.rs  note_renderer.rs  sync_manager.rs
rust/src/game/mods/: ghost.rs  mod.rs  nofail.rs  speed.rs
rust/src/menu/: maplist.rs  menu.rs  mod.rs  mods.rs  viewports.rs
rust/src/menu/maplist/: container.rs  details.rs  map_button.rs  mod.rs
rust/src/menu/settings/: audio.rs  cursor.rs  mod.rs  note.rs
rust/src/settings/: loader.rs  mod.rs  saver.rs
scenes/: game.tscn  loading.tscn  menu.tscn
shaders/: blur.gdshader
src/: Flux.hpp  Global.zig  Registry.cpp  Registry.hpp  Settings.zig  main.c  main.zig  registry.c
src/content/: Beatmap.cpp  Beatmap.hpp  Beatmap.zig  BeatmapSet.cpp  BeatmapSet.hpp  BeatmapSet.zig  (+1 more)
(+81 files in other folders)
