[package]
name = "fluxv3"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features=["experimental-threads", "experimental-godot-api"] }
json = "0.12.4"
tokio = {version = "1.37.0", features = ["full"]}
byteorder = "1.5.0"
serde = {version = "1.0.201", features = ["derive"]}
bincode = "1.3.3"
rand = "0.8.5"
gxhash = "3.2.0"